# ProjetTI202

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  algorithm.c  algorithm.h  area.c  area.h  chained_list.c  chained_list.h  double_chained_list.c  double_chained_list.h  geometry.c  geometry.h  gui.c  gui.h  id.c  id.h  keyboard.c  keyboard.h  layer.c  layer.h  layers.c  layers.h  main.c  menu.c  menu.h  pixel.c  pixel.h  utils.c  utils.h
.github/workflows/: cmake-macos.yml  cmake-ubuntu.yml  cmake-windows.yml  gcc-macos.yml  gcc-ubuntu.yml
